--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="rightmenu">
 				<ul>
-					<li>Log In</li>
+					<li><a href="LogIn">Log In</a></li>
 					<li><button id=buttontwo>Sign Up</button></li>
 				</ul>
 			</div>
@@ -34,7 +34,23 @@
 			<button id="buttonone"> login </button>
 		</div>
 	</div>
-
+	<!-- <div class="footer"> -->
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="job">Job</a></li>
+				<li><a href="Blog">Blog</a></li>
+				<li><a href="Developers">Developers</a></li>
+				<li><a href="Guidelines">Guidelines</a></li>
+				<li><a href="Privacy">Privacy</a></li>
+				<li><a href="Terms">Terms</a> </li>
+				<li><a href="Help">Help</a></li>
+				<li> <a href="forum">forum</a></li>
+				<li><a href="English">English</a></li>
+			</ul>
+		</nav>
+	</footer>
 </body>
 
 </html>
