--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 			</div>
 			<div class="rightmenu">
 				<ul>
-					<li><a href="LogIn">Log In</a></li>
-					<li><button id=buttontwo>Sign Up</button></li>
+					<li><a href="register.html">Log In</a></li>
+					<li><button type="button" onclick="dangki.html"><a href="register.html" > Sign Up</a></button></li>
 				</ul>
 			</div>
 		</div>
 
 		<div class="text">
 			<h1>Find your inspiration </h1>
-			<button id="buttonone"> login </button>
+			<button id="buttonone"> <a href="register.html" >login</a> </button>
 		</div>
 	</div>
 	<!-- <div class="footer"> -->
