--- a/html/you_test.html
+++ b/html/you_test.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Galery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/profile.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function(){
             $(".msearch").click(function(){
@@ -46,9 +46,9 @@
             <li><a class="clink active" href="#">You</a></li>
             <li><a class="clink" href="#">Explore</a></li>
             <li><a class="clink" href="#">Create</a></li>
-            <img class="menu_img" src="css/img/menu_icon.png" alt="menu">
+            <img class="menu_img" src="../css/img/menu_icon.png" alt="menu">
             <div class="pdrop">
-                <img id="pimage" src="css/img/profile.jpg" alt="profile big">
+                <img id="pimage" src="../css/img/profile.jpg" alt="profile big">
                 O
                 <div class="log_out">
                     <a href="#">Setting</a>
@@ -56,10 +56,10 @@
                 </div>
             </div>
             <input class="cinput" type="text" name="search" autocomplete="off" placeholder="Search Galery..">
-            <img class="msearch" src="css/img/search_icon.png" alt="search">
-            <img class="menu_cancel" src="css/img/cancel_icon.png" alt="cancel">
+            <img class="msearch" src="../css/img/search_icon.png" alt="search">
+            <img class="menu_cancel" src="../css/img/cancel_icon.png" alt="cancel">
         </ul>
-        <img class="cancel" src="css/img/cancel_icon.png" alt="cancel">
+        <img class="cancel" src="../css/img/cancel_icon.png" alt="cancel">
         <input class = "minput" type="text" name="msearch" autocomplete="off" placeholder="Search Galery..">
     </div>
     <div class = "banner">
@@ -67,7 +67,7 @@
         <div class="main_banner">
             <table>
                 <tr>
-                    <td rowspan="2"><img id="mpimage" src="css/img/profile.jpg" alt="profile image"></td>
+                    <td rowspan="2"><img id="mpimage" src="../css/img/profile.jpg" alt="profile image"></td>
                     <td colspan="2" class="name1">Real Name</td>
                 </tr>
                 <tr>
@@ -88,19 +88,19 @@
         </ul>
     </div>
     <div class="page">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
-        <img src="css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
+        <img src="../css/img/profile.jpg" alt="iamge">
     </div>
     <div class="footer">
         <ul class="fcontent">
